...

  switch (activeTool) {
    case "rotate":
      return (
        <View className="flex-row gap-2 mt-1">
          <Button
            testID="e2e-action-editor__param_id-rotate90cw"
            size="sm"
            variant={params.rotateMode === "rotate90cw" ? "primary" : "outline"}
            onPress={() => {
              params.setRotateMode("rotate90cw");
              onParamChange?.();
            }}
...
